--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+  <style>
+    *{margin: 0; padding: 0; box-sizing: border-box;}
+  </style>
 </html>
